--- a/custom_components/pijuice/manifest.json
+++ b/custom_components/pijuice/manifest.json
@@ -1,11 +1,12 @@
 {
-    "domain": "pijuice",
-    "name": "PiJuice UPS HAT",
-    "documentation": "https://github.com/Racailloux/home-assistant-pijuice/",
-    "issue_tracker": "https://github.com/Racailloux/home-assistant-pijuice/issues",
-    "requirements": ["smbus2==0.4.1"],
-    "version": "1.2.2",
-    "dependencies": [],
-    "codeowners": ["@Racailloux"],
-    "iot_class": "local_polling"
+  "domain": "pijuice",
+  "name": "PiJuice UPS HAT",
+  "codeowners": ["@Racailloux"],
+  "dependencies": [],
+  "documentation": "https://github.com/Racailloux/home-assistant-pijuice/",
+  "integration_type": "hub",
+  "iot_class": "local_polling"
+  "issue_tracker": "https://github.com/Racailloux/home-assistant-pijuice/issues",
+  "requirements": ["smbus2==0.4.1"],
+  "version": "1.2.2",
 }
