--- a/custom_components/pijuice/manifest.json
+++ b/custom_components/pijuice/manifest.json
@@ -5,8 +5,8 @@
   "dependencies": [],
   "documentation": "https://github.com/Racailloux/home-assistant-pijuice/",
   "integration_type": "hub",
-  "iot_class": "local_polling"
+  "iot_class": "local_polling",
   "issue_tracker": "https://github.com/Racailloux/home-assistant-pijuice/issues",
   "requirements": ["smbus2==0.4.1"],
-  "version": "1.2.2",
+  "version": "1.2.2"
 }
